<resources>
    <string name="app_name">Social Media</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change BOTH strings as required -->
    <string name="back4app_app_id">ymzQ8atk5zl64mJuhFGOI6LVNRtqFvgTOFTJgnrq</string>
    <string name="back4app_client_key">BCvXXaqkzUhvMeO4v3W2izP9tIQ5MsB4BgSXuAkq</string>

    <string name="new_user">New User? <b>Sign Up</b></string>
    <string name="existing_user">Existing User☺, <b>Login</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_name">User Profile Name</string>
    <string name="user_bio">User Bio</string>
    <string name="user_profession">User Profession</string>
    <string name="user_hobbies">User Hobbies</string>
    <string name="user_favorite_sport">User Favorite Sport</string>
    <string name="no_post">No Post</string>
</resources>